package appli;

import behaviors.ComportementArme;

public class Chevalier extends Personnage{

	public Chevalier(ComportementArme a) {
		super(a);
	}
	
	
}
