package behaviors.Arc;

import behaviors.ComportementArme;

public class ComportementArc implements ComportementArme{

	@Override
	public void utiliserArme() {
		// TODO Auto-generated method stub
		System.out.println("j'utilise un arc");
	}

}
