package behaviors;

public interface ComportementArme {
	
	public void utiliserArme();
	
}
