package behaviors.Epee;

import behaviors.ComportementArme;

public class ComportementEpee implements ComportementArme{

	@Override
	public void utiliserArme() {
		// TODO Auto-generated method stub
		System.out.println("j'utilise une épée");
	}

}
