package behaviors.Poignard;

import behaviors.ComportementArme;

public class ComportementPoignard implements ComportementArme{

	@Override
	public void utiliserArme() {
		// TODO Auto-generated method stub
		System.out.println("j'utilise un poignard");
	}

}
